<resources>
    <string name="app_name">Omer\'s Place</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Menu strings-->
    <string name="menu_home">Home</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_more">More</string>
    
    <string name="currency">$</string>
    <string name="order_now">Order Now</string>

    <string name="more_my_orders">My Orders</string>
    <string name="more_account">Account Settings</string>
    <string name="more_change_password">Change Password</string>
    <string name="more_logout">Log Out</string>

    <string name="choose_quantity">Please choose quantity!</string>
    <string name="added_to_cart">Added to cart!</string>

    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="home_page">Home Page</string>
    <string name="description">Description</string>
    <string name="no_item_in_cart">There are no items in your cart!</string>
    <string name="total_cost">Total Cost:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="delete">Delete</string>
</resources>